--- a/mercedes.html
+++ b/mercedes.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta name="mercedes" content="width=device-width, initial-scale=1.0">
     <title>mercedes</title>
+            <link rel="icon" type="image/png" href="imeges mercedes/logomer.png"/> <!-- Añade tu favicon aquí -->
+
     <style>
+         /* Media queries para responsividad */
+        @media (max-width: 768px) {
+            /* Ajusta los estilos aquí para dispositivos móviles */
+            nav a {
+                margin: 0 5px; /* Menos espacio entre enlaces */
+                font-size: 14px; /* Tamaño de fuente más pequeño */
+            }
+            header, section {
+                padding: 10px; /* Menos padding para ajustar contenido */
+            }
+        }
+
+        /* Efecto hover en el menú */
+        nav a:hover {
+            color: #fad408; /* Cambia el color al pasar el mouse */
+        }
         body {
             background-color: #000000;
             margin: 0;
@@ -135,9 +153,9 @@
 </head>
 <body>
     <header id="inicio">
-        <img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\logomercedes.png" alt="Logo" id="logo">
+        <img src="image mercedes/logomercedes.png" alt="Logo" id="logo">
         <nav>
-            <a href="#inicio">Inicio</a>
+            <a href="https://oskii1010rtega.github.io/f1">Inicio</a>
             <a href="#historia">Historia</a>
             <a href="#pilotos">Pilotos</a>
             <a href="#coches">Coches</a>
@@ -149,7 +167,7 @@
     <section id="historia">
      <h2>Historia</h2>
         <div class="historia">
-            <img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\cmercedes.png" alt=>
+            <img src="image mercedes/cmercedes.png" alt=>
             <div class="descripcion">
                 <h3>Historia de Mercedes en la F1</h3>
                 <p>Mercedes-Benz tiene una rica historia en la Fórmula 1, remontándose a los primeros días de la competición. Sin embargo, su participación oficial como equipo de fábrica se inició en 1954, cuando la marca alemana ingresó con su propio equipo y coche, el W196. Rápidamente, Mercedes logró el éxito, ganando el campeonato de pilotos con Juan Manuel Fangio. Tras este éxito, Mercedes se retiró de la F1 como equipo de fábrica, aunque continuó suministrando motores a varios equipos.</p>
@@ -165,17 +183,17 @@
         <h2>Pilotos</h2>
         <div class="pilotos">
             <div class="piloto-container">
-                <a href="file:///C:/Users/115973/OneDrive/Documentos/richie/mercedes/george%20russell.html">
+                <a href="russell.html">
  <center><p>George Russell</p></center>
-                    <center><img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\russell.png" alt="George Russell"></center>
+                    <center><img src="image mercedes/russell.png" alt="George Russell"></center>
                     <button type="button" style="background-color: #ffffff; color: #ffffff;">Visitar perfil de Russell</button>
                 </a>
                
             </div>
             <div class="piloto-container">
-                <a href="file:///C:/Users/115973/OneDrive/Documentos/richie/mercedes/hamilton.html">
+                <a href="hamilton.html">
                <center><p>Lewis Hamilton</p></center>
-                    <center><img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\hamilton.png" alt="Lewis Hmilton"></center>
+                    <center><img src="image mercedes/hamilton.png" alt="Lewis Hmilton"></center>
                     <button type="button" style="background-color: #e6e6e6; color: #e6e6e6;">Visitar perfil de Lewis Hamilton</button>
                 </a>
                
@@ -185,8 +203,8 @@
  <section id="coches">
      <h2>Coches</h2>
         <div class="coches">
- <center><img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\carro1.png" alt=</center>
-<center><img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\carro2.png" alt=></center>
+ <center><img src="image mercedes/carro1.png" alt=</center>
+<center><img src="image mercedes/carro2.png" alt=></center>
 
     </section>
 
@@ -198,8 +216,8 @@
 
 
   <footer>
-    <img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\pie.png" alt="Descripción de la imagen">
-<img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image mercedes\p2.png" alt="Descripción de la imagen">
+    <img src="image mercedes/pie.png" alt="Descripción de la imagen">
+<img src="image mercedes/p2.png" alt="Descripción de la imagen">
     @Copyright Ximenice todos los derechos reservados 2024.
 </footer>
 
