--- a/mercedes.html
+++ b/mercedes.html
@@ -21,7 +21,7 @@
 
         /* Efecto hover en el menú */
         nav a:hover {
-            color: #fad408; /* Cambia el color al pasar el mouse */
+            color: #FFFFFF; /* Cambia el color al pasar el mouse */
         }
         body {
             background-color: #000000;
