--- a/mercedes.html
+++ b/mercedes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="mercedes" content="width=device-width, initial-scale=1.0">
     <title>mercedes</title>
-            <link rel="icon" type="image/png" href="imeges mercedes/logomer.png"/> <!-- Añade tu favicon aquí -->
+            <link rel="icon" type="image/png" href="image mercedes/logomer.png"/> <!-- Añade tu favicon aquí -->
 
     <style>
          /* Media queries para responsividad */
