--- a/hamilton.html
+++ b/hamilton.html
@@ -1,13 +1,16 @@
-<html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil de George Russell</title>
+    <title>Perfil de  Lewis Hamilton</title>
+            <link rel="icon" type="image/png" href="image mercedes/logomer.png"/> <!-- Añade tu favicon aquí -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #001a30;
+            background-image: url('image mercedes/mercedes2.jpeg'); /* Cambia esto por la ruta de tu imagen */
+            background-size: cover; /* Cubre todo el fondo */
+            background-position: center; /* Centra la imagen de fondo */
             margin: 0;
             padding: 0;
         }
@@ -15,7 +18,7 @@
             max-width: 600px;
             margin: 50px auto;
             padding: 20px;
-            background-color: #001a30;
+            background-color: rgba(0, 26, 48, 0.8); /* Hace el fondo ligeramente transparente */
             border-radius: 40px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -44,13 +47,13 @@
 
 <div class="perfil">
     <div class="foto">
-        <img src="C:\Users\115973\OneDrive\Documentos\richie\mercedes\image hamilton\hamilton.png" alt>
+        <img src="images perez/checo.gif" alt>
     </div>
     <div class="nombre">
-        Lewis Hamilton
+         Lewis Hamilton
     </div>
     <div class="descripcion">
-        <p>Lewis Hamilton, nacido el 7 de enero de 1985 en Stevenage, Hertfordshire, Inglaterra, es un piloto británico de Fórmula 1 y una de las figuras más destacadas en la historia del automovilismo. Desde su debut en la Fórmula 1 en 2007 con el equipo McLaren, Hamilton ha dejado una marca imborrable en el deporte, convirtiéndose en uno de los pilotos más exitosos y reconocidos de todos los tiempos.</p>
+       <p>Lewis Hamilton, nacido el 7 de enero de 1985 en Stevenage, Hertfordshire, Inglaterra, es un piloto británico de Fórmula 1 y una de las figuras más destacadas en la historia del automovilismo. Desde su debut en la Fórmula 1 en 2007 con el equipo McLaren, Hamilton ha dejado una marca imborrable en el deporte, convirtiéndose en uno de los pilotos más exitosos y reconocidos de todos los tiempos.</p>
         <p>Su talento natural para la velocidad y su habilidad excepcional al volante lo han llevado a ganar múltiples campeonatos mundiales de pilotos, estableciendo récords y dejando una huella indeleble en la historia de la Fórmula 1. Hamilton es conocido por su estilo de conducción agresivo y su capacidad para adaptarse rápidamente a diferentes condiciones en la pista, lo que le ha permitido dominar en una variedad de circuitos y enfrentarse exitosamente a algunos de los pilotos más talentosos del mundo.</p>
         <p>Además de su éxito en la pista, Hamilton también es reconocido por su activismo fuera de ella, abogando por la igualdad racial, la diversidad y la sostenibilidad ambiental. Es un defensor apasionado de causas sociales y ambientales, utilizando su plataforma como piloto de Fórmula 1 para generar conciencia sobre temas importantes y promover el cambio positivo en el mundo.</p>
         <p>A lo largo de su carrera, Hamilton ha sido parte de equipos de renombre como McLaren y Mercedes, con este último equipo con el que ha logrado la mayor parte de sus éxitos en la Fórmula 1. Con Mercedes, Hamilton ha ganado múltiples campeonatos mundiales de pilotos y constructores, estableciendo nuevos estándares de excelencia y dominio en el deporte.</p>
@@ -61,9 +64,7 @@
         <p>Además de la competición en la pista, la Fórmula 1 también ha sido pionera en la introducción de tecnologías innovadoras en el automovilismo, desde sistemas de seguridad avanzados hasta motores híbridos de alta eficiencia.</p>
         <p>A lo largo de su carrera, Hamilton ha enfrentado críticas y desafíos, pero siempre ha demostrado una determinación inquebrantable para alcanzar sus objetivos. Su impacto en la Fórmula 1 va más allá de sus logros en la pista, ya que ha inspirado a una nueva generación de pilotos y ha elevado el perfil del deporte a nivel mundial. Hamilton sigue siendo una fuerza dominante en la Fórmula 1 y su legado perdurará mucho tiempo después de que cuelgue el casco.</p>
        
-
-
-</div>
+    </div>
 </div>
 
 </body>
