--- a/hamilton.html
+++ b/hamilton.html
@@ -47,7 +47,7 @@
 
 <div class="perfil">
     <div class="foto">
-        <img src="images perez/checo.gif" alt>
+        <img src="image hamilton/hamilton.gif" alt>
     </div>
     <div class="nombre">
          Lewis Hamilton
