--- a/mercedes.html
+++ b/mercedes.html
@@ -183,7 +183,7 @@
         <h2>Pilotos</h2>
         <div class="pilotos">
             <div class="piloto-container">
-                <a href="russell.html">
+                <a href="george russell.html">
  <center><p>George Russell</p></center>
                     <center><img src="image mercedes/russell.png" alt="George Russell"></center>
                     <button type="button" style="background-color: #ffffff; color: #ffffff;">Visitar perfil de Russell</button>
