--- a/mercedes.html
+++ b/mercedes.html
@@ -35,7 +35,7 @@
             background-color: #000000;
             color: #ffffff;
             padding: 20px;
-            text-align: center;
+            text-align: justify;
             position: fixed;
             width: 100%;
             top: 0;
