--- a/mercedes.html
+++ b/mercedes.html
@@ -28,6 +28,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
+            text-align: justify;
             color: #00f5d0;
         }
 
